- add opensource as version suffix

--- a/projects/android/app/build.gradle
+++ b/projects/android/app/build.gradle
@@ -80,12 +80,12 @@ android {
             // This property is optional if you are using only one dimension.
             dimension "version"
             applicationIdSuffix ".gpg"
-            versionNameSuffix "-gpg"
+            versionNameSuffix "-gpg-opensource"
         }
         full {
             dimension "version"
             applicationIdSuffix ""
-            versionNameSuffix ""
+            versionNameSuffix "-opensource"
         }
     }
 }
