--- a/projects/android/app/build.gradle
+++ b/projects/android/app/build.gradle
@@ -107,6 +107,7 @@ dependencies {
     implementation 'com.appsflyer:af-android-sdk:4.8.15@aar'
     implementation 'com.android.installreferrer:installreferrer:1.0'
     implementation 'com.android.billingclient:billing:1.2'
+    implementation 'com.android.volley:volley:1.1.1'
 
     implementation "android.arch.lifecycle:extensions:1.1.1"
 }
