- Separate frame compressor into dedicated files.
So that we can implement different frame compressor class in future.

--- a/source/core/CMakeLists.txt
+++ b/source/core/CMakeLists.txt
@@ -22,6 +22,8 @@ set(MY_SRC_FILES
     NstCrc32.cpp
     NstFds.cpp
     NstFile.cpp
+    NstFrameCompressorCommon.cpp
+    NstFrameCompressorZlib.cpp
     NstImage.cpp
     NstImageDatabase.cpp
     NstLog.cpp
